syntax = "proto3";

package habits;
option go_package = "github.com/doniacld/charmify/habit-tracker-service/api";

import "habit.proto";
import "google/protobuf/timestamp.proto";

// Habits is a service for registering and tracking habits.
service Habits {
  // CreateHabit is the endpoint that registers a habit.
  rpc CreateHabit(CreateHabitRequest) returns (CreateHabitResponse);

  // ListHabits is the endpoint that returns all habits.
  rpc ListHabits(ListHabitsRequest) returns (ListHabitsResponse);

  // TickHabit is the endpoint to tick a habit.
  rpc TickHabit(TickHabitRequest) returns (TickHabitResponse);

  // GetHabitStatus is the endpoint to retrieve the status of ticks of a habit.
  rpc GetHabitStatus(GetHabitStatusRequest) returns (GetHabitStatusResponse);
}

// CreateHabitRequest is the message sent to create a habit.
message CreateHabitRequest {
  // Name of the new habit. Cannot be empty.
  string name = 1;
  // Description of the new habit.
  string description = 2;
  // Frequency of the new habit. Defaults to once per week.
  optional int32 weekly_frequency = 3;
}

// CreateHabitResponse is the response of the create endpoint.
message CreateHabitResponse {
  Habit habit = 1;
}

// ListHabitsRequest is the request to list all the habits saved.
message ListHabitsRequest {

}

// ListHabitsResponse is the response with all the saved habits.
message ListHabitsResponse {
  // habits holds all the stored habits with their specificities (id, name, weekly frequency).
  repeated Habit habits = 1;
}

// TickHabitRequest holds the identifier of a habit to tick it.
message TickHabitRequest {
  // The identifier of the habit we want to tick. This field is required.
  string habit_id = 1;

  // The time for which we want to tick a habit.
  // This field is optional, if empty the default value is set to the current time.
  google.protobuf.Timestamp timestamp = 2;
}

// TickHabitRequest is the response to TickHabit endpoint.
// Currently empty but open to grow.
message TickHabitResponse {

}

// GetHabitStatusRequest is the request to GetHabitStatus endpoint.
message GetHabitStatusRequest {
  // The identifier of the habit we want to retrieve. This field is required.
  string habit_id = 1;

  // The time for which we want to retrieve the status of a habit.
  // This field is optional, if empty the default value is set to the current time.
  optional google.protobuf.Timestamp timestamp = 2;
}

// GetHabitStatusResponse is the response to retrieving the status of a habit.
message GetHabitStatusResponse {
  // All the information of a habit.
  Habit habit = 1;
  // The number of times the habit has been ticked for a given week.
  int32 ticks_count = 2;
}
